--- a/auth/package.json
+++ b/auth/package.json
@@ -4,21 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "skaffold": "skaffold dev --no-prune=false --cache-artifacts=false"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.3",
     "@types/pg": "^8.6.6",
     "ts-node": "^10.9.1",
