--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "next": "^13.4.1",
     "react": "^18.2.0",
