--- a/infrastructure/k8s/ingress-srv.yaml
+++ b/infrastructure/k8s/ingress-srv.yaml
@@ -15,4 +15,13 @@ spec:
             name: auth-srv
             port:
               number: 3000
+  - http:
+      paths:
+      - path: /?(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: client-srv
+            port:
+              number: 3000
   ingressClassName: nginx
