--- a/infrastructure/k8s/auth-depl.yaml
+++ b/infrastructure/k8s/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auth-container
-          image: danielkimtor15/auth:latest
+          image: us.gcr.io/ticketing-dev-422303/auth:latest
           ports:
           - containerPort: 3000
 ---
