--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,10 +8,12 @@ manifests:
 build:
   tagPolicy:
     sha256: {}
-  local:
-    push: true
+  # local:
+  #   push: false
+  googleCloudBuild:
+    projectId: ticketing-dev-422303
   artifacts:
-    - image: danielkimtor15/auth
+    - image: us.gcr.io/ticketing-dev-422303/auth
       context: auth
       docker:
        dockerfile: Dockerfile
