--- a/auth/package.json
+++ b/auth/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emarketproject/common": "^1.0.8",
     "cookie-session": "^2.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
