--- a/infrastructure/k8s/client-depl.yaml
+++ b/infrastructure/k8s/client-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: client-container
-          image: danielkimtor15/client:latest
+          image: us.gcr.io/ticketing-dev-422303/client:latest
           ports:
           - containerPort: 3000
 ---
