--- a/infrastructure/k8s/postgres-depl.yaml
+++ b/infrastructure/k8s/postgres-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: us.gcr.io/ticketing-dev-422303/postgres:15.2
+          image: postgres:15.2
           env:
             - name: POSTGRES_USER
               value: admin
